--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "swiper": "^8.0.3",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
+    "vue-slick": "^1.1.16",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
